# multi-stark

./: Cargo.toml  README.md  build.rs  deny.toml  flake.nix
.github/workflows/: ci.yml
benches/: multi_stark.rs
cuda/: README.md  gpu_api.cu
examples/: lookup_proof.rs  preprocessed_proof.rs  simple_proof.rs
multi-plonk/: Cargo.toml
multi-plonk/examples/: lookup_proof.rs  preprocessed_proof.rs  pythagorean.rs
multi-plonk/src/: air.rs  lib.rs  lookup.rs  matrix.rs  prover.rs  system.rs  types.rs  verifier.rs
multi-plonk/src/builder/: check.rs  folder.rs  mod.rs  symbolic.rs
src/: lib.rs  lookup.rs  proof.rs  prover.rs  system.rs  test_debug.rs  types.rs  u32_add.rs  verifier.rs
src/builder/: check.rs  folder.rs  mod.rs  symbolic.rs
src/chips/: blake3.rs  blake3_circuit.rs  byte_operations.rs  mod.rs  right_rotate_with_lookups.rs  u32_add.rs  utility.rs
src/cuda/: dft.rs  ffi.rs  mod.rs  tests.rs
src/test_circuits/: blake3.rs  byte_operations.rs  mod.rs  u32_add.rs
