[package]
name = "multi-plonk"
version = "0.1.0"
edition = "2024"
authors = ["Argument Engineering <engineering@argument.xyz>"]
license = "MIT OR Apache-2.0"
rust-version = "1.88"

[dependencies]
ark-bls12-381 = { version = "0.5", features = ["curve"] }
ark-ec = "0.5"
ark-ff = "0.5"
ark-poly = "0.5"
ark-std = "0.5"
ark-crypto-primitives = { version = "0.5", features = ["sponge"] }
ark-poly-commit = "0.5"
ark-serialize = "0.5"

[lints.clippy]
cast_lossless = "warn"
cast_possible_truncation = "warn"
cast_precision_loss = "warn"
cast_sign_loss = "warn"
cast_possible_wrap = "warn"
ptr_as_ptr = "warn"
checked_conversions = "warn"
dbg_macro = "warn"
derive_partial_eq_without_eq = "warn"
enum_glob_use = "warn"
explicit_into_iter_loop = "warn"
fallible_impl_from = "warn"
filter_map_next = "warn"
flat_map_option = "warn"
from_iter_instead_of_collect = "warn"
implicit_clone = "warn"
inefficient_to_string = "warn"
large_stack_arrays = "warn"
large_types_passed_by_value = "warn"
macro_use_imports = "warn"
manual_assert = "warn"
map_err_ignore = "warn"
map_unwrap_or = "warn"
match_same_arms = "warn"
match_wild_err_arm = "warn"
needless_continue = "warn"
needless_for_each = "warn"
needless_pass_by_value = "warn"
option_option = "warn"
same_functions_in_if_condition = "warn"
trait_duplication_in_bounds = "warn"
unnecessary_wraps = "warn"
unnested_or_patterns = "warn"
use_self = "warn"

[lints.rust]
nonstandard_style = "warn"
rust_2024_compatibility = "warn"
trivial_numeric_casts = "warn"
unused_lifetimes = "warn"
unused_qualifications = "warn"
unreachable_pub = "warn"
